generator client {
    provider = "prisma-client-js"
}
generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
    provider = "postgresql"
    url = env("DATABASE_URL")
    //relationMode = "prisma"
}


model Account {
    id                String  @id @default(cuid())
    userId            String
    type              String
    provider          String
    providerAccountId String
    refresh_token     String? @db.Text
    access_token      String? @db.Text
    expires_at        Int?
    token_type        String?
    scope             String?
    id_token          String? @db.Text
    session_state     String?
    user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@unique([provider, providerAccountId])
    @@index([userId], name: "idx_userId")
}

model Session {
    id           String   @id @default(cuid())
    sessionToken String   @unique
    userId       String
    expires      DateTime
    user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId], name: "idx_session_userId")
}

model User {
    id            String    @id @default(cuid())
    name          String?
    email         String?   @unique
    emailVerified DateTime?
    image         String?
    accounts      Account[]
    sessions      Session[]
}

model VerificationToken {
    identifier String
    token      String   @unique
    expires    DateTime

    @@unique([identifier, token])
}

model Oprema {
    id              Int   @id 
    naziv_opreme    String
    kolicina        Int
    status_opreme   Boolean
    opis            String
}

model Finance {
    transaction_id  Int @id
    datum DateTime
    artikli String
    cena Float
    kupec String
}


model Voznja {
    voznja_id      Int      @id
    datum          DateTime
    zac_km         Int
    kon_km         Int
    namen          String
    voznik         String
}

model Clan {
    clan_id        Int           @id
    ime            String
    priimek        String
    datum_rojstva  DateTime
    specialnosti   String
    kraj_bivanja   String
    zdravniski     DateTime?
    funkcija       String
    cin            String
}

model Intervencija {
    intervencija_id Int              @id
    datum           DateTime
    tip             String
    st_clanov       Int
    opis            String
}

